# literate-train

./: .env.example  .gitignore  README.md  compose.yaml  fix_models.py  report.md  test_makemigrations.py
clio/: .dockerignore  .env.example  FIXES_PROGRESS.md  compose.dev.yaml  compose.yaml  docker-compose.yml  environment.yml  pyproject.toml
clio/backend/: .env.example  Dockerfile  cli.py  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
clio/backend/accounts/: authentication.py  backends.py  jwt_utils.py  middleware.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
clio/backend/accounts/management/commands/: seed_initial_passwords.py
clio/backend/api_keys/: admin.py  models.py  serializers.py  tests.py  urls.py
clio/backend/api_keys/migrations/: 0001_initial.py
clio/backend/audit/: urls.py
clio/backend/backend/: asgi.py  cli.py  urls.py  wsgi.py
clio/backend/backend/settings/: __init__.py  base.py  development.py  production.py  test.py
clio/backend/common/: exceptions.py  middleware.py  redis_client.py
clio/backend/evidence/: admin.py  models.py  urls.py  views.py
clio/backend/evidence/migrations/: 0002_add_file_field.py
clio/backend/export/: serializers.py  urls.py  views.py
clio/backend/ingest/: serializers.py  urls.py  views.py
clio/backend/ingest/c2_profiles/: __init__.py  base_connector.py  cobalt_strike.py
clio/backend/logs/: admin.py  apps.py  encryption.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
clio/backend/logs/migrations/: 0001_initial.py
clio/backend/operations/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
clio/backend/operations/migrations/: 0002_operation_tag_trigger.py  0003_rename_fk_fields.py  0004_unique_constraint.py
clio/backend/relations/: admin.py  apps.py  models.py  serializers.py  urls.py
clio/backend/relations/migrations/: 0001_initial.py
clio/backend/sessions_mgmt/: urls.py
clio/backend/tags/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
clio/backend/tags/migrations/: 0001_initial.py  0002_seed_default_tags.py  0003_rename_fk_fields.py  0004_unique_constraint.py
clio/backend/templates_mgmt/: admin.py  apps.py  models.py  urls.py  views.py
clio/backend/templates_mgmt/migrations/: 0002_alter_logtemplate_id.py
clio/backend/tests/: test_c2_profiles.py  test_export.py  test_logs.py  test_middleware.py
clio/backend/threat_intel/: apps.py  assistants.py  models.py  rag.py  tasks.py  urls.py  views.py
clio/backend/threat_intel/migrations/: 0001_initial.py  0002_chatsession.py
clio/frontend/: .dockerignore  Dockerfile  index.html  package.json  vite.config.js
clio/frontend/src/: App.css  App.jsx
clio/frontend/src/__tests__/: App.test.jsx  LoginPage.test.jsx  LogsPage.test.jsx  OperationsPage.test.jsx
clio/frontend/src/api/: client.js
clio/frontend/src/components/: ProtectedRoute.jsx
clio/frontend/src/context/: AuthContext.jsx
clio/frontend/src/pages/: ChatPage.jsx  ExportPage.jsx  LoginPage.jsx  LogsPage.jsx  OperationsPage.jsx  SettingsPage.jsx  TagsPage.jsx  ThreatIntelPage.jsx
clio/generate_env/: __main__.py  certs.py  env_writer.py
clio/nginx/: Dockerfile  nginx.conf
clio/relation_service/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  relation_service_cli.py  requirements.txt
clio/relation_service/file_tracking/: apps.py  serializers.py  urls.py  views.py
clio/relation_service/file_tracking/migrations/: 0001_initial.py
clio/relation_service/relation_service/: asgi.py  settings.py  urls.py
clio/relation_service/relations/: models.py  serializers.py  urls.py  views.py
clio/relation_service/relations/migrations/: 0001_initial.py  0002_unique_constraint.py
overwatch/: FIXES_PROGRESS.md  environment.yml  pyproject.toml
overwatch/backend/: .env.example  Dockerfile  entrypoint.sh  pytest.ini
overwatch/backend/accounts/: hashers.py  jwt_utils.py  permissions.py  sanitizers.py  throttles.py  urls.py
overwatch/backend/api_keys/: admin.py  models.py  views.py
overwatch/backend/api_keys/migrations/: 0002_alter_apikey_id_alter_apikey_permissions.py
overwatch/backend/audit/: views.py
overwatch/backend/backend/: asgi.py  celery.py  urls.py  wsgi.py
overwatch/backend/backend/settings/: base.py  development.py  production.py  test.py
overwatch/backend/common/: exceptions.py  redis_client.py
overwatch/backend/evidence/: models.py  serializers.py  urls.py
overwatch/backend/evidence/migrations/: 0001_initial.py
overwatch/backend/export/: urls.py  views.py
overwatch/backend/ingest/c2_profiles/: base_connector.py  sliver.py
overwatch/backend/logs/: models.py  serializers.py  tasks.py  views.py
overwatch/backend/logs/migrations/: 0002_remove_autofield_use_bigautofield.py  0003_logaicontext_logaicontextsource.py
overwatch/backend/operations/: models.py  urls.py  views.py
overwatch/backend/operations/migrations/: 0001_initial.py  0002_operation_tag_trigger.py
overwatch/backend/relations/: models.py  views.py
overwatch/backend/sessions_mgmt/: apps.py  urls.py  views.py
overwatch/backend/tags/: admin.py
overwatch/backend/tags/migrations/: 0005_seed_tag_descriptions.py
overwatch/backend/templates_mgmt/: admin.py  serializers.py
overwatch/backend/templates_mgmt/migrations/: 0001_initial.py
overwatch/backend/tests/: test_auth.py  test_middleware.py  test_operations.py  test_tags.py
overwatch/backend/threat_intel/: admin.py  assistants.py  models.py  rag.py  tasks.py  urls.py  views.py
overwatch/backend/threat_intel/migrations/: 0003_fix_thread_id_add_session_source.py
overwatch/frontend/: index.html  package.json
overwatch/frontend/public/: manifest.json
overwatch/frontend/src/: App.css  App.jsx
overwatch/frontend/src/components/: ProtectedRoute.jsx
overwatch/frontend/src/pages/: ChatPage.jsx  ExportPage.jsx  LoginPage.jsx  LogsPage.jsx  OperationsPage.jsx  SettingsPage.jsx  ThreatIntelPage.jsx
overwatch/generate_env/: __main__.py  certs.py  env_writer.py
(+9 files in other folders)
