[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clio-platform"
version = "1.0.0"
description = "Clio Platform - Security Operations Logger for authorized pentesting, CTF, and red team exercises"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]
# Install everything (backend + relation-service) for local dev
all = [
    "clio-platform[dev]",
]

# ---------------------------------------------------------------------------
# Console scripts — available on PATH after `pip install -e .`
# ---------------------------------------------------------------------------
[project.scripts]
clio-generate-env = "generate_env.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["generate_env"]
