[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clio-backend"
version = "1.0.0"
description = "Clio Platform - Security Operations Logger backend service"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "Django>=5.1,<5.3",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "django-filter>=24.0",
    "django-redis>=5.4",
    "django-cors-headers>=4.3",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "gunicorn>=22.0",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "cryptography>=42.0",
    "PyJWT>=2.8",
    "passlib>=1.7",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

# ---------------------------------------------------------------------------
# Console scripts — available on PATH after `pip install -e .`
# ---------------------------------------------------------------------------
[project.scripts]
clio-server          = "cli:server"
clio-dev             = "cli:dev_server"
clio-migrate         = "cli:migrate"
clio-makemigrations  = "cli:make_migrations"
clio-seed-passwords  = "cli:seed_passwords"
clio-seed-data       = "cli:seed_data"
clio-createsuperuser = "cli:create_superuser"
clio-shell           = "cli:shell"
clio-manage          = "cli:manage"
clio-test            = "cli:test"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings.development"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
]
ignore = [
    "S101",  # assert used (fine in tests)
    "S105",  # hardcoded password (false positives in test fixtures)
    "S106",  # hardcoded password
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["S101", "S105", "S106"]
"conftest.py" = ["S101", "S105", "S106"]
"**/tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = [
    "accounts",
    "api_keys",
    "audit",
    "backend",
    "common",
    "evidence",
    "export",
    "ingest",
    "logs",
    "operations",
    "sessions_mgmt",
    "tags",
    "templates_mgmt",
]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"manage.py" = "manage.py"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = [
    "accounts",
    "api_keys",
    "common",
    "evidence",
    "export",
    "ingest",
    "logs",
    "operations",
    "sessions_mgmt",
    "tags",
    "templates_mgmt",
]
omit = ["*/migrations/*", "*/tests/*", "conftest.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
