[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clio-relation-service"
version = "1.0.0"
description = "Clio Platform - Relation service for log relationships and file tracking"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "Django>=5.1,<5.3",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "django-filter>=24.0",
    "psycopg[binary]>=3.1",
    "gunicorn>=22.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.4",
]

[project.scripts]
clio-relation-server  = "relation_service_cli:server"
clio-relation-manage  = "relation_service_cli:manage"
clio-relation-migrate = "relation_service_cli:migrate"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "relation_service.settings"
python_files = ["tests.py", "test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.hatch.build.targets.wheel]
packages = [
    "file_tracking",
    "relation_service",
    "relations",
]

[tool.hatch.build.targets.wheel.force-include]
"relation_service_cli.py" = "relation_service_cli.py"
"manage.py" = "manage.py"
